protect admin endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,10 @@ services:
       dockerfile: backend/Dockerfile
     container_name: hotelbooking-api
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__Default: Host=db;Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+    ASPNETCORE_ENVIRONMENT: Development
+    AdminKey: ${ADMIN_KEY}
+    ConnectionStrings__Default: Host=db;Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+   
     ports:
       - "${API_PORT}:8080"
     depends_on:
