--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ POSTGRES_DB=hotelbooking
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres123
 POSTGRES_PORT=5432
-
+ADMIN_KEY=dev-admin-key
 API_PORT=8080
 WEB_PORT=5173
